# effective-rustlings-jp

./: Cargo.toml  README.md  create_dir.sh  info.toml
exercises/10_traits_Familiarize_yourself_with_standard_traits/: 1_clone.rs  2_copy.rs  3_default.rs  4_PartialEq.rs
exercises/11_traits_Implement_the_drop_trait_for_RAII_patterns/: 1_drop.rs
exercises/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/: 1_generics.rs  2_trait_objects.rs  3_trait_for_trait.rs  4_include_different_struct.rs
exercises/13_traits_Use_default_implementations_to_minimize_required_trait_methods/: 1_required_and_default_methods.rs
exercises/18_concepts_Dont_panic/: 1_hint_for_panic.rs
exercises/19_concepts_Avoid_reflection/: 1_check_unique_id.rs
exercises/1_types_Use_the_type_system_to_express_your_data_structures/: 1_integer_types.rs  2_enum_1.rs  2_enum_2.rs  2_enum_3.rs
exercises/22_dependencies_Minimize_visibility/: 1_check_pub_action.rs
exercises/23_dependencies_Avoid_wildcard_imports/: 1_not_use_wildcard.rs
exercises/27_tooling_Document_public_interfaces/: 1_write_doc.rs
exercises/28_tooling_Use_macros_judiciously/: 1_be_careful_order_definition.rs  2_local_scope.rs
exercises/29_tooling_Listen_to_clippy/: 1_unused_variables.rs  2_clone_on_copy.rs  3_inefficient_to_string.rs
exercises/2_types_Use_the_type_system_to_express_common_behavior/: 1_methods.rs  2_function_pointer.rs  3_closure.rs
exercises/30_tooling_Write_more_than_unit_tests/: 1_tests.rs
exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/: 1_if_let.rs  2_processing_outsourced.rs  3_unuse_result_type.rs  4_sugar_result_process.rs
exercises/4_types_Prefer_idiomatic_error_types/: 1_my_error_string.rs  2_nest_error.rs
exercises/5_types_Understand_type_conversions/: 1_write_from_trait.rs  2_use_into.rs  3_reflexive_implementation.rs
exercises/6_types_Embrace_the_newtype_pattern/: 1_use_new_type.rs  2_avoid_trait_rule.rs
exercises/7_types_Use_builders_for_complex_types/: 1_create_builder_1.rs  1_create_builder_2.rs
exercises/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/: 1_iter_sum.rs  2_iter_skip.rs  3_iter_filter.rs  4_turbofish_syntax.rs
solutions/10_traits_Familiarize_yourself_with_standard_traits/: 1_clone.rs  2_copy.rs  3_default.rs  4_PartialEq.rs
solutions/11_traits_Implement_the_drop_trait_for_RAII_patterns/: 1_drop.rs
solutions/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/: 1_generics.rs  2_trait_objects.rs  3_trait_for_trait.rs  4_include_different_struct.rs
solutions/13_traits_Use_default_implementations_to_minimize_required_trait_methods/: 1_required_and_default_methods.rs
solutions/18_concepts_Dont_panic/: 1_hint_for_panic.rs
solutions/19_concepts_Avoid_reflection/: 1_check_unique_id.rs
solutions/1_types_Use_the_type_system_to_express_your_data_structures/: 1_integer_types.rs  2_enum_1.rs  2_enum_2.rs  2_enum_3.rs
solutions/22_dependencies_Minimize_visibility/: 1_check_pub_action.rs
solutions/23_dependencies_Avoid_wildcard_imports/: 1_not_use_wildcard.rs
solutions/27_tooling_Document_public_interfaces/: 1_write_doc.rs
solutions/28_tooling_Use_macros_judiciously/: 1_be_careful_order_definition.rs  2_local_scope.rs
solutions/29_tooling_Listen_to_clippy/: 1_unused_variables.rs  2_clone_on_copy.rs  3_inefficient_to_string.rs
solutions/2_types_Use_the_type_system_to_express_common_behavior/: 1_methods.rs  2_function_pointer.rs  3_closure.rs
solutions/30_tooling_Write_more_than_unit_tests/: 1_tests.rs
solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/: 1_if_let.rs  2_processing_outsourced.rs  3_unuse_result_type.rs  4_sugar_result_process.rs
solutions/4_types_Prefer_idiomatic_error_types/: 1_my_error_string.rs  2_nest_error.rs
solutions/5_types_Understand_type_conversions/: 1_write_from_trait.rs  2_use_into.rs  3_reflexive_implementation.rs
solutions/6_types_Embrace_the_newtype_pattern/: 1_use_new_type.rs  2_avoid_trait_rule.rs
solutions/7_types_Use_builders_for_complex_types/: 1_create_builder_1.rs  1_create_builder_2.rs
solutions/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/: 1_iter_sum.rs  2_iter_skip.rs  3_iter_filter.rs  4_turbofish_syntax.rs
