# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "1_integer_types", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/1_integer_types.rs" },
  { name = "1_integer_types_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/1_integer_types.rs" },
  { name = "2_enum_1", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_1.rs" },
  { name = "2_enum_1_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_1.rs" },
  { name = "2_enum_2", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_2.rs" },
  { name = "2_enum_2_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_2.rs" },
  { name = "2_enum_3", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_3.rs" },
  { name = "2_enum_3_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_3.rs" },
  { name = "1_methods", path = "exercises/2_types_Use_the_type_system_to_express_common_behavior/1_methods.rs" },
  { name = "1_methods_sol", path = "solutions/2_types_Use_the_type_system_to_express_common_behavior/1_methods.rs" },
  { name = "2_function_pointer", path = "exercises/2_types_Use_the_type_system_to_express_common_behavior/2_function_pointer.rs" },
  { name = "2_function_pointer_sol", path = "solutions/2_types_Use_the_type_system_to_express_common_behavior/2_function_pointer.rs" },
  { name = "3_closure", path = "exercises/2_types_Use_the_type_system_to_express_common_behavior/3_closure.rs" },
  { name = "3_closure_sol", path = "solutions/2_types_Use_the_type_system_to_express_common_behavior/3_closure.rs" },
  { name = "1_if_let", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/1_if_let.rs" },
  { name = "1_if_let_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/1_if_let.rs" },
  { name = "2_processing_outsourced", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/2_processing_outsourced.rs" },
  { name = "2_processing_outsourced_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/2_processing_outsourced.rs" },
  { name = "3_unuse_result_type", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/3_unuse_result_type.rs" },
  { name = "3_unuse_result_type_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/3_unuse_result_type.rs" },
  { name = "4_sugar_result_process", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/4_sugar_result_process.rs" },
  { name = "4_sugar_result_process_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/4_sugar_result_process.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
