# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "1_integer_types", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/1_integer_types.rs" },
  { name = "1_integer_types_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/1_integer_types.rs" },
  { name = "2_enum_1", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_1.rs" },
  { name = "2_enum_1_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_1.rs" },
  { name = "2_enum_2", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_2.rs" },
  { name = "2_enum_2_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_2.rs" },
  { name = "2_enum_3", path = "exercises/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_3.rs" },
  { name = "2_enum_3_sol", path = "solutions/1_types_Use_the_type_system_to_express_your_data_structures/2_enum_3.rs" },
  { name = "1_methods", path = "exercises/2_types_Use_the_type_system_to_express_common_behavior/1_methods.rs" },
  { name = "1_methods_sol", path = "solutions/2_types_Use_the_type_system_to_express_common_behavior/1_methods.rs" },
  { name = "2_function_pointer", path = "exercises/2_types_Use_the_type_system_to_express_common_behavior/2_function_pointer.rs" },
  { name = "2_function_pointer_sol", path = "solutions/2_types_Use_the_type_system_to_express_common_behavior/2_function_pointer.rs" },
  { name = "3_closure", path = "exercises/2_types_Use_the_type_system_to_express_common_behavior/3_closure.rs" },
  { name = "3_closure_sol", path = "solutions/2_types_Use_the_type_system_to_express_common_behavior/3_closure.rs" },
  { name = "1_if_let", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/1_if_let.rs" },
  { name = "1_if_let_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/1_if_let.rs" },
  { name = "2_processing_outsourced", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/2_processing_outsourced.rs" },
  { name = "2_processing_outsourced_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/2_processing_outsourced.rs" },
  { name = "3_unuse_result_type", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/3_unuse_result_type.rs" },
  { name = "3_unuse_result_type_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/3_unuse_result_type.rs" },
  { name = "4_sugar_result_process", path = "exercises/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/4_sugar_result_process.rs" },
  { name = "4_sugar_result_process_sol", path = "solutions/3_types_Prefer_option_and_result_transforms_over_explicit_match_expressions/4_sugar_result_process.rs" },
  { name = "1_my_error_string", path = "exercises/4_types_Prefer_idiomatic_error_types/1_my_error_string.rs" },
  { name = "1_my_error_string_sol", path = "solutions/4_types_Prefer_idiomatic_error_types/1_my_error_string.rs" },
  { name = "2_nest_error", path = "exercises/4_types_Prefer_idiomatic_error_types/2_nest_error.rs" },
  { name = "2_nest_error_sol", path = "solutions/4_types_Prefer_idiomatic_error_types/2_nest_error.rs" },
  { name = "1_write_from_trait", path = "exercises/5_types_Understand_type_conversions/1_write_from_trait.rs" },
  { name = "1_write_from_trait_sol", path = "solutions/5_types_Understand_type_conversions/1_write_from_trait.rs" },
  { name = "2_use_into", path = "exercises/5_types_Understand_type_conversions/2_use_into.rs" },
  { name = "2_use_into_sol", path = "solutions/5_types_Understand_type_conversions/2_use_into.rs" },
  { name = "3_reflexive_implementation", path = "exercises/5_types_Understand_type_conversions/3_reflexive_implementation.rs" },
  { name = "3_reflexive_implementation_sol", path = "solutions/5_types_Understand_type_conversions/3_reflexive_implementation.rs" },
  { name = "1_use_new_type", path = "exercises/6_types_Embrace_the_newtype_pattern/1_use_new_type.rs" },
  { name = "1_use_new_type_sol", path = "solutions/6_types_Embrace_the_newtype_pattern/1_use_new_type.rs" },
  { name = "2_avoid_trait_rule", path = "exercises/6_types_Embrace_the_newtype_pattern/2_avoid_trait_rule.rs" },
  { name = "2_avoid_trait_rule_sol", path = "solutions/6_types_Embrace_the_newtype_pattern/2_avoid_trait_rule.rs" },
  { name = "1_create_builder_1", path = "exercises/7_types_Use_builders_for_complex_types/1_create_builder_1.rs" },
  { name = "1_create_builder_1_sol", path = "solutions/7_types_Use_builders_for_complex_types/1_create_builder_1.rs" },
  { name = "1_create_builder_2", path = "exercises/7_types_Use_builders_for_complex_types/1_create_builder_2.rs" },
  { name = "1_create_builder_2_sol", path = "solutions/7_types_Use_builders_for_complex_types/1_create_builder_2.rs" },
  { name = "1_iter_sum", path = "exercises/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/1_iter_sum.rs" },
  { name = "1_iter_sum_sol", path = "solutions/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/1_iter_sum.rs" },
  { name = "2_iter_skip", path = "exercises/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/2_iter_skip.rs" },
  { name = "2_iter_skip_sol", path = "solutions/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/2_iter_skip.rs" },
  { name = "3_iter_filter", path = "exercises/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/3_iter_filter.rs" },
  { name = "3_iter_filter_sol", path = "solutions/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/3_iter_filter.rs" },
  { name = "4_turbofish_syntax", path = "exercises/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/4_turbofish_syntax.rs" },
  { name = "4_turbofish_syntax_sol", path = "solutions/9_types_Consider_using_iterator_transforms_instead_of_explicit_loops/4_turbofish_syntax.rs" },
  { name = "1_clone", path = "exercises/10_traits_Familiarize_yourself_with_standard_traits/1_clone.rs" },
  { name = "1_clone_sol", path = "solutions/10_traits_Familiarize_yourself_with_standard_traits/1_clone.rs" },
  { name = "2_copy", path = "exercises/10_traits_Familiarize_yourself_with_standard_traits/2_copy.rs" },
  { name = "2_copy_sol", path = "solutions/10_traits_Familiarize_yourself_with_standard_traits/2_copy.rs" },
  { name = "3_default", path = "exercises/10_traits_Familiarize_yourself_with_standard_traits/3_default.rs" },
  { name = "3_default_sol", path = "solutions/10_traits_Familiarize_yourself_with_standard_traits/3_default.rs" },
  { name = "4_PartialEq", path = "exercises/10_traits_Familiarize_yourself_with_standard_traits/4_PartialEq.rs" },
  { name = "4_PartialEq_sol", path = "solutions/10_traits_Familiarize_yourself_with_standard_traits/4_PartialEq.rs" },
  { name = "1_drop", path = "exercises/11_traits_Implement_the_drop_trait_for_RAII_patterns/1_drop.rs" },
  { name = "1_drop_sol", path = "solutions/11_traits_Implement_the_drop_trait_for_RAII_patterns/1_drop.rs" },
  { name = "1_generics", path = "exercises/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/1_generics.rs" },
  { name = "1_generics_sol", path = "solutions/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/1_generics.rs" },
  { name = "2_trait_objects", path = "exercises/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/2_trait_objects.rs" },
  { name = "2_trait_objects_sol", path = "solutions/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/2_trait_objects.rs" },
  { name = "3_trait_for_trait", path = "exercises/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/3_trait_for_trait.rs" },
  { name = "3_trait_for_trait_sol", path = "solutions/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/3_trait_for_trait.rs" },
  { name = "4_include_different_struct", path = "exercises/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/4_include_different_struct.rs" },
  { name = "4_include_different_struct_sol", path = "solutions/12_traits_Understand_the_trade_offs_between_generics_and_trait_objects/4_include_different_struct.rs" },
  { name = "1_required_and_default_methods", path = "exercises/13_traits_Use_default_implementations_to_minimize_required_trait_methods/1_required_and_default_methods.rs" },
  { name = "1_required_and_default_methods_sol", path = "solutions/13_traits_Use_default_implementations_to_minimize_required_trait_methods/1_required_and_default_methods.rs" },
  { name = "1_hint_for_panic", path = "exercises/18_concepts_Dont_panic/1_hint_for_panic.rs" },
  { name = "1_hint_for_panic_sol", path = "solutions/18_concepts_Dont_panic/1_hint_for_panic.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
time = { version = "0.3", features = ["macros"] }
